force-app/main/default/objects/temporal_Emails__c/temporal_Emails__c.object-meta.xml
<CustomObject>
    <label>Temporal Email</label>
    <nameField>
        <label>Temporal Email</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>