force-app/main/default/objects/temporal_Emails__c/fields/EM_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>EM_ALUMNO__c</fullName>
    <label>EM_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>