force-app/main/default/objects/temporal_Emails__c/fields/EM_EMILIO__c.field-meta.xml
<CustomField>
    <fullName>EM_EMILIO__c</fullName>
    <label>EM_EMILIO</label>
    <type>Email</type>
</CustomField>