force-app/main/default/objects/temporal_Emails__c/fields/EM_FECANU__c.field-meta.xml
<CustomField>
    <fullName>EM_FECANU__c</fullName>
    <label>EM_FECANU</label>
    <type>Date</type>
</CustomField>