force-app/main/default/objects/temporal_Emails__c/fields/EM_LASTENV__c.field-meta.xml
<CustomField>
    <fullName>EM_LASTENV__c</fullName>
    <label>EM_LASTENV</label>
    <type>Date</type>
</CustomField>