force-app/main/default/objects/temporal_Emails__c/fields/EM_PREFER__c.field-meta.xml
<CustomField>
    <fullName>EM_PREFER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EM_PREFER</label>
    <type>Checkbox</type>
</CustomField>