force-app/main/default/objects/temporal_Emails__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>DDDKEY__c</columns>
    <columns>P_DDDKEY__c</columns>
    <columns>EM_ALUMNO__c</columns>
    <columns>EM_EMILIO__c</columns>
    <columns>EM_PREFER__c</columns>
    <columns>FA__c</columns>
    <columns>FM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EM_ALUMNO__c</field>
        <operation>equals</operation>
        <value>07537</value>
    </filters>
    <label>All Records</label>
</ListView>